# InsertStudentInfomation

./: CMakeLists.txt  FileIO.cpp  FileIO.h  LogUpDao.cpp  LogUpDao.h  MD5.cpp  MD5.h  Student.h  main.cpp
include/: my_config.h  mysql_version.h  mysqlx_ername.h  mysqlx_error.h  mysqlx_version.h
lib/: libxl.lib
